--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,6 @@ dependencies:
   - rdkit
   - pip
   - pip:
-      - streamlit
+      - streamlit==0.71.0
       - streamlit.components.v1.html
       - pandas==1.1.3
