--- a/environment.yml
+++ b/environment.yml
@@ -5,8 +5,8 @@ dependencies:
   - python=3.7.9
   - mols2grid
   - rdkit
+  - streamlit.components.v1
   - pip
   - pip:
       - streamlit==0.71.0
-      - streamlit.components.v1.*
       - pandas==1.1.3
