--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,5 @@ dependencies:
   - rdkit
   - pip
   - pip:
-      - streamlit==0.71.0
-      - streamlit.components.v1
+      - streamlit
       - pandas==1.1.3
