--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - rdkit
   - pip
   - pip:
-      - streamlit
+      - streamlit==0.71.0
       - pandas==1.1.3
       - mols2grid
+      - click==8
