--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - rdkit
   - pip
   - pip:
-      - streamlit==0.71.0
+      - streamlit
       - pandas==1.1.3
       - mols2grid
       - click==8
